tests/paczka1/fuzzy1/14375044.err
Error in line 1: YxzX0eAm A899 78,3
Error in line 25: HbN A899 80,1
Error in line 24: Ybb S581 68,4
Error in line 40: Ybb S581 11,53
